--- a/index.html
+++ b/index.html
@@ -5,34 +5,34 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 <style>
-body { font-family: system-ui; padding:16px; background:#fafafa; color:#333; }
-.card { background:#fff; padding:15px; border-radius:12px; margin-bottom:12px; border:1px solid #ddd; box-shadow: 0 2px 4px rgba(0,0,0,0.05); }
-h2 { font-size:24px; margin-bottom:10px; color:#0a7cff; }
-#username { font-size:18px; font-weight:bold; }
-#role { font-size:16px; color:#666; margin-bottom:16px; }
-button { width:100%; padding:14px; font-size:16px; border-radius:10px; border:none; margin-bottom:10px; cursor: pointer; font-weight:bold; }
-.primary { background:#0a7cff; color:#fff; }
-.secondary { background:#e0e0e0; color:#333; }
-.danger { background:#e53935; color:#fff; }
-.success { background:#2e7d32; color:#fff; }
-input, select { width:100%; padding:12px; box-sizing: border-box; font-size:16px; margin-bottom:8px; border-radius:8px; border:1px solid #ccc; }
-#formBox, #historyBox { display:none; }
-.label { font-size:14px; color:#888; margin-top:4px; }
-.val { font-size:16px; font-weight:500; margin-bottom:8px; }
+  body { font-family: system-ui, -apple-system, sans-serif; padding:16px; background:#f5f5f5; color:#333; }
+  .card { background:#fff; padding:16px; border-radius:12px; margin-bottom:12px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); border:1px solid #eee; }
+  h2 { font-size:24px; color:#0a7cff; margin-bottom:15px; }
+  #username { font-weight:bold; font-size:18px; }
+  #roleBadge { display:inline-block; padding:3px 10px; border-radius:15px; background:#e0e0e0; font-size:13px; margin-bottom:15px; }
+  button { width:100%; padding:14px; font-size:16px; border-radius:10px; border:none; margin-bottom:10px; cursor: pointer; font-weight:bold; transition: 0.2s; }
+  .primary { background:#0a7cff; color:#fff; }
+  .secondary { background:#e0e0e0; color:#444; }
+  .danger { background:#f44336; color:#fff; }
+  .success { background:#4caf50; color:#fff; }
+  input, select { width:100%; padding:12px; box-sizing: border-box; font-size:16px; margin-bottom:10px; border-radius:8px; border:1px solid #ccc; }
+  #formBox, #historyBox { display:none; }
+  .info-label { font-size:12px; color:#888; margin-top:5px; }
+  .info-val { font-size:15px; margin-bottom:8px; }
 </style>
 </head>
 <body>
 
 <h2>ระบบจองรถ หก-มน.</h2>
-<div id="username">กำลังโหลดโปรไฟล์...</div>
-<div id="role"></div>
+<div id="username">กำลังโหลด...</div>
+<div id="roleBadge">...</div>
 
 <button id="mainBtn" class="primary"></button>
 <button id="subBtn" class="secondary"></button>
-<div id="driverBox"></div>
+<div id="driverActionBox"></div>
 
 <div id="formBox" class="card">
-  <h3 id="formTitle">กรอกข้อมูลการจอง</h3>
+  <h3 id="formTitle">ระบุรายละเอียดการจอง</h3>
   <input type="date" id="booking_date">
   <input type="time" id="booking_time">
   <select id="vehicle_type">
@@ -40,20 +40,19 @@ input, select { width:100%; padding:12px; box-sizing: border-box; font-size:16px
     <option value="รถเก๋ง">รถเก๋ง</option>
     <option value="รถกระบะ">รถกระบะ</option>
     <option value="รถตู้">รถตู้</option>
-    <option value="ไม่ระบุ">ไม่ระบุ</option>
   </select>
   <input type="number" id="passenger_count" placeholder="จำนวนผู้โดยสาร">
   <input type="text" id="pickup_location" placeholder="จุดรับ">
   <input type="text" id="dropoff_location" placeholder="จุดส่ง">
   <input type="text" id="contact_mobile" placeholder="เบอร์ติดต่อ">
-  <button class="primary" onclick="submitBooking()">ยืนยันการจอง</button>
+  <button class="primary" onclick="submitBooking()">ยืนยัน</button>
   <button class="secondary" onclick="closeForm()">ยกเลิก</button>
 </div>
 
 <div id="historyBox"></div>
 
 <script>
-const ENDPOINT = "https://script.google.com/macros/s/AKfycbyQovetwqhpnyjQWF-jqzKcJ49Tgd09BnIoAWVBEenp--UEs2nd2sTQrECvmzMKp7_Xpw/exec"; // *** เปลี่ยนเป็น URL ของคุณ ***
+const ENDPOINT = "https://script.google.com/macros/s/AKfycby39cJMgYc9QIH1oygKdI5IAZ_BKn5xzPnef0ap63eBvroy61sHaUI1s8N3B1O8kBRgwg/exec"; // *** เปลี่ยนเป็น URL ของคุณ ***
 let userId = "", role = "", mobile = "", displayName = "";
 
 async function init() {
@@ -61,7 +60,7 @@ async function init() {
   if (!liff.isLoggedIn()) liff.login();
   const p = await liff.getProfile();
   userId = p.userId; displayName = p.displayName;
-  document.getElementById("username").innerText = "สวัสดี, " + displayName;
+  document.getElementById("username").innerText = displayName;
 
   const res = await fetch(ENDPOINT, {
     method: "POST",
@@ -74,41 +73,34 @@ async function init() {
 
 function render() {
   const mainBtn = document.getElementById("mainBtn");
-  document.getElementById("role").innerText = role === "driver" ? "🔓 บทบาท: พนักงานขับรถ" : "👤 บทบาท: ผู้ใช้งานทั่วไป";
-  const dBox = document.getElementById("driverBox");
-  dBox.innerHTML = "";
+  document.getElementById("roleBadge").innerText = role === "driver" ? "🔓 พนักงานขับรถ" : "👤 ผู้ใช้งานทั่วไป";
+  const driverBox = document.getElementById("driverActionBox");
+  driverBox.innerHTML = "";
 
   if (role === "driver") {
-    mainBtn.innerText = "ลงงานด่วน (กรอกเอง)";
-    dBox.innerHTML = `
+    mainBtn.innerText = "ลงงานเอง (งานด่วน)";
+    driverBox.innerHTML = `
       <button class="secondary" onclick="editDriverMobile()">แก้ไขเบอร์โทร</button>
-      <button class="danger" onclick="cancelDriverRole()">ยกเลิกบทบาทพนักงานขับรถ</button>
+      <button class="danger" onclick="cancelDriverRole()">ยกเลิกบทบาทคนขับ</button>
     `;
   } else {
-    mainBtn.innerText = "จองรถพร้อมคนขับ";
-    dBox.innerHTML = `<button class="secondary" onclick="registerDriver()">ลงทะเบียนเป็นพนักงานขับรถ</button>`;
+    mainBtn.innerText = "จองรถ";
+    driverBox.innerHTML = `<button class="secondary" onclick="registerDriver()">สมัครเป็นพนักงานขับรถ</button>`;
   }
   mainBtn.onclick = showForm;
-  document.getElementById("subBtn").innerText = "ดูประวัติงาน";
+  document.getElementById("subBtn").innerText = "ประวัติงาน";
   document.getElementById("subBtn").onclick = showHistory;
 }
 
-/* --- Helpers สำหรับแก้วันที่/เวลา ISO --- */
-function formatDisplayDate(dateStr) {
-  if (!dateStr || dateStr === "null") return "-";
-  return dateStr.split('T')[0];
-}
-function formatDisplayTime(timeStr) {
-  if (!timeStr || timeStr === "null") return "-";
-  if (timeStr.includes('T')) return timeStr.split('T')[1].substring(0, 5);
-  return timeStr;
-}
+/* Helpers */
+function formatD(d) { return (d && d.includes("T")) ? d.split("T")[0] : d; }
+function formatT(t) { return (t && t.includes("T")) ? t.split("T")[1].substring(0, 5) : t; }
 
 async function showHistory() {
   document.getElementById("formBox").style.display = "none";
   const hBox = document.getElementById("historyBox");
   hBox.style.display = "block";
-  hBox.innerHTML = "<p>กำลังโหลดรายการ...</p>";
+  hBox.innerHTML = "<p>กำลังดึงข้อมูล...</p>";
 
   const res = await fetch(ENDPOINT, {
     method: "POST",
@@ -116,48 +108,38 @@ async function showHistory() {
   }).then(r => r.json());
 
   if (!res.data || res.data.length === 0) {
-    hBox.innerHTML = "<p>ไม่พบประวัติการจอง</p><button class='secondary' onclick='closeHistory()'>ปิด</button>";
+    hBox.innerHTML = "<p>ไม่พบข้อมูล</p><button class='secondary' onclick='closeHistory()'>ปิด</button>";
     return;
   }
   
-  hBox.innerHTML = "<h3>รายการงาน</h3>" + res.data.map(b => renderBookingCard(b)).join("") + `<button class='secondary' onclick='closeHistory()'>ปิดหน้าต่าง</button>`;
-}
-
-function renderBookingCard(b) {
-  const isPending = b.status === "pending";
-  const canCancel = (b.booked_by === userId || b.driver_line_id === userId) && b.status !== "cancelled";
-  const isDriverButNotOwner = role === "driver" && isPending && b.booked_by !== userId;
-
-  return `
+  hBox.innerHTML = "<h3>รายการงาน</h3>" + res.data.map(b => `
     <div class="card">
-      <div class="label">📅 วันที่และเวลา:</div>
-      <div class="val">${formatDisplayDate(b.booking_date)} | ${formatDisplayTime(b.booking_time)} น.</div>
-      <div class="label">📍 เส้นทาง:</div>
-      <div class="val">${b.pickup_location} ➔ ${b.dropoff_location}</div>
-      <div class="label">💬 สถานะ:</div>
-      <div class="val" style="color:${b.status === 'pending' ? '#f39c12' : '#27ae60'}">
-        ${b.status.toUpperCase()} ${b.driver_name ? '(' + b.driver_name + ')' : ''}
+      <div class="info-label">วันที่ & เวลา:</div>
+      <div class="info-val"><b>${formatD(b.booking_date)} | ${formatT(b.booking_time)} น.</b></div>
+      <div class="info-label">เส้นทาง:</div>
+      <div class="info-val">${b.pickup_location} → ${b.dropoff_location}</div>
+      <div class="info-label">สถานะ:</div>
+      <div class="info-val" style="color:${b.status === 'pending' ? 'orange' : 'green'}">
+        ${b.status.toUpperCase()} ${b.driver_name ? '('+b.driver_name+')' : ''}
       </div>
-      ${isDriverButNotOwner ? `<button class="success" onclick="acceptJob('${b.booking_id}')">✅ รับงานนี้ (First Get)</button>` : ""}
-      ${canCancel ? `<button class="danger" onclick="cancelBooking('${b.booking_id}')">❌ ยกเลิกงาน</button>` : ""}
+      ${(role === 'driver' && b.status === 'pending' && b.booked_by !== userId) ? `<button class="success" onclick="acceptJob('${b.booking_id}')">✅ รับงานนี้</button>` : ""}
+      ${((b.booked_by === userId || b.driver_line_id === userId) && b.status !== 'cancelled') ? `<button class="danger" onclick="cancelBooking('${b.booking_id}')">ยกเลิก</button>` : ""}
     </div>
-  `;
+  `).join("") + `<button class="secondary" onclick="closeHistory()">ปิด</button>`;
 }
 
 async function acceptJob(id) {
-  if (!confirm("คุณต้องการรับงานนี้ใช่หรือไม่?")) return;
+  if (!confirm("ต้องการรับงานนี้ใช่ไหม?")) return;
   const res = await fetch(ENDPOINT, {
     method: "POST",
     body: JSON.stringify({ action: "accept_job", booking_id: id, line_user_id: userId, display_name: displayName })
   }).then(r => r.json());
-  if (res.success) { alert("รับงานสำเร็จ!"); showHistory(); }
-  else alert(res.message || "ไม่สามารถรับงานได้");
+  if (res.success) { alert("รับงานสำเร็จ!"); showHistory(); } else { alert(res.message); }
 }
 
 async function submitBooking() {
   const fields = ["booking_date", "booking_time", "vehicle_type", "passenger_count", "pickup_location", "dropoff_location", "contact_mobile"];
-  for (let f of fields) { if (!document.getElementById(f).value) return alert("กรุณากรอกข้อมูลให้ครบ"); }
-
+  for (let f of fields) { if (!document.getElementById(f).value) return alert("ข้อมูลไม่ครบ"); }
   const res = await fetch(ENDPOINT, {
     method: "POST",
     body: JSON.stringify({
@@ -167,42 +149,22 @@ async function submitBooking() {
       booking_time: document.getElementById("booking_time").value,
       vehicle_type: document.getElementById("vehicle_type").value,
       passenger_count: document.getElementById("passenger_count").value,
-      pickup_location: document.getElementById("pickup_location").value.trim(),
-      dropoff_location: document.getElementById("dropoff_location").value.trim(),
-      contact_mobile: document.getElementById("contact_mobile").value.trim()
+      pickup_location: document.getElementById("pickup_location").value,
+      dropoff_location: document.getElementById("dropoff_location").value,
+      contact_mobile: document.getElementById("contact_mobile").value
     })
   }).then(r => r.json());
-
   if (res.success) { alert("บันทึกสำเร็จ"); closeForm(); showHistory(); }
-  else alert("เกิดข้อผิดพลาด");
 }
 
-/* --- ฟังก์ชันเดิมคงไว้ --- */
+/* ฟังก์ชันอื่นๆ คงเดิมตามที่คุณต้องการ */
 function showForm() { document.getElementById("formBox").style.display = "block"; document.getElementById("historyBox").style.display = "none"; document.getElementById("contact_mobile").value = mobile; }
 function closeForm() { document.getElementById("formBox").style.display = "none"; }
 function closeHistory() { document.getElementById("historyBox").style.display = "none"; }
-async function registerDriver() {
-  const phone = prompt("กรุณากรอกเบอร์โทรพนักงานขับรถ", mobile);
-  if (!phone) return;
-  const res = await fetch(ENDPOINT, { method: "POST", body: JSON.stringify({ action: "register_driver", line_user_id: userId, mobile_phone: phone.trim() }) }).then(r => r.json());
-  if (res.success) { alert("ลงทะเบียนเรียบร้อย"); role = "driver"; mobile = phone.trim(); render(); }
-}
-async function cancelBooking(id) {
-  if (!confirm("ยืนยันยกเลิกงานนี้?")) return;
-  const res = await fetch(ENDPOINT, { method: "POST", body: JSON.stringify({ action: "cancel_booking", booking_id: id, line_user_id: userId }) }).then(r => r.json());
-  if (res.success) showHistory();
-}
-async function editDriverMobile() {
-  const phone = prompt("กรอกเบอร์โทรใหม่", mobile);
-  if (!phone) return;
-  const res = await fetch(ENDPOINT, { method: "POST", body: JSON.stringify({ action: "edit_driver_mobile", line_user_id: userId, mobile_phone: phone.trim() }) }).then(r => r.json());
-  if (res.success) mobile = phone.trim();
-}
-async function cancelDriverRole() {
-  if (!confirm("ยกเลิกบทบาทคนขับ?")) return;
-  const res = await fetch(ENDPOINT, { method: "POST", body: JSON.stringify({ action: "cancel_driver", line_user_id: userId }) }).then(r => r.json());
-  if (res.success) { role = "user"; render(); }
-}
+async function cancelBooking(id) { if(confirm("ยืนยันยกเลิก?")){ const res = await fetch(ENDPOINT, { method:"POST", body:JSON.stringify({action:"cancel_booking", booking_id:id, line_user_id:userId}) }).then(r=>r.json()); if(res.success) showHistory(); } }
+async function registerDriver() { const phone = prompt("เบอร์โทรคนขับ"); if(phone){ const res = await fetch(ENDPOINT, { method:"POST", body:JSON.stringify({action:"register_driver", line_user_id:userId, mobile_phone:phone}) }).then(r=>r.json()); if(res.success) location.reload(); } }
+async function editDriverMobile() { const phone = prompt("เบอร์โทรใหม่", mobile); if(phone){ const res = await fetch(ENDPOINT, { method:"POST", body:JSON.stringify({action:"edit_driver_mobile", line_user_id:userId, mobile_phone:phone}) }).then(r=>r.json()); if(res.success) mobile = phone; } }
+async function cancelDriverRole() { if(confirm("ยกเลิกบทบาท?")){ const res = await fetch(ENDPOINT, { method:"POST", body:JSON.stringify({action:"cancel_driver", line_user_id:userId}) }).then(r=>r.json()); if(res.success) location.reload(); } }
 
 init();
 </script>
